--- a/style.css
+++ b/style.css
@@ -36,3 +36,24 @@
 div.textbox:nth-of-type(odd) {
   background-color: aquamarine;
 }
+
+.title2 {
+  margin-left: 20%;
+  font-size: 2.5rem;
+  line-height: 2;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.textbox4 {
+  background-color: lightgreen;
+  max-width:55%;
+  font-size: 2rem;
+  padding: 20px;
+  text-align: center;
+  margin-left: 10%;
+  margin-bottom: 1.5rem;
+  font-family: "Dosis";
+  border-radius: 10px;
+}
+
+
